--- a/NHapp/res/layout/mitmf_general.xml
+++ b/NHapp/res/layout/mitmf_general.xml
@@ -37,6 +37,8 @@
             <Spinner
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="4dp"
                 android:id="@+id/mitmf_interface"
                 android:spinnerMode="dropdown" />
 
