--- a/NHapp/res/layout/base_layout.xml
+++ b/NHapp/res/layout/base_layout.xml
@@ -17,12 +17,12 @@ view using match_parent for both width and height to consume the full space avai
         android:scaleType="centerCrop" />
 
     <ImageView
+        android:id="@+id/base_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:alpha="0.05"
+        android:alpha="0.13"
         android:contentDescription="@string/app_name"
-        app:srcCompat="@drawable/nh_cropbg"
         android:scaleType="center" />
 
     <com.google.android.material.navigation.NavigationView xmlns:app="http://schemas.android.com/apk/res-auto"
