--- a/NHapp/res/layout/hid_powersploit.xml
+++ b/NHapp/res/layout/hid_powersploit.xml
@@ -48,7 +48,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/payload"
-            android:padding="4dp" />
+            android:padding="4dp"
+            android:layout_marginTop="4dp" />
 
         <Spinner
             android:id="@+id/payload"
@@ -62,7 +63,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
             android:hint="@string/ps_payload_url">
 
             <com.google.android.material.textfield.TextInputEditText
