--- a/NHapp/res/layout/kaliservices_recyclerview_servicetitle.xml
+++ b/NHapp/res/layout/kaliservices_recyclerview_servicetitle.xml
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
+            android:layout_marginTop="7dp"
             android:text="Loading.."
             android:textColor="@android:color/background_light"
             android:textSize="20sp"
