--- a/NHapp/res/layout/macchanger.xml
+++ b/NHapp/res/layout/macchanger.xml
@@ -119,13 +119,14 @@
                     android:layout_marginRight="16dp"
                     android:textColor="@color/cardview_light_background"/>
 
-                <ImageButton
+                <Button
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.IconOnly"
                     android:id="@+id/f_macchanger_reloadMAC_imgbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:contentDescription="@string/reloadMAC"
-                    app:srcCompat="@drawable/ic_action_refresh" />
+                    app:icon="@drawable/ic_action_refresh" />
 
             </LinearLayout>
 
