--- a/NHapp/res/layout/nethunter_recyclerview_main.xml
+++ b/NHapp/res/layout/nethunter_recyclerview_main.xml
@@ -23,6 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
+            android:layout_marginTop="7dp"
             android:textColor="@color/cardview_light_background"
             android:text="Loading"
             android:textSize="20sp"
