--- a/NHapp/res/layout/pineapple.xml
+++ b/NHapp/res/layout/pineapple.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp">
@@ -73,12 +74,11 @@
         android:digits="0123456789."
         android:text="@string/pineapple_subnet" />
 
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/pineapple_noupstream"
-        android:id="@+id/pineapple_noup" />
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/pineapple_noupstream"
+            android:id="@+id/pineapple_noup" />
 
         <CheckBox
             android:layout_width="wrap_content"
