--- a/NHapp/res/layout/source_short.xml
+++ b/NHapp/res/layout/source_short.xml
@@ -35,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/update"
-            android:onClick="updateSource" />
+            android:onClick="updateSource"
+            android:layout_marginLeft="1dip" />
     </LinearLayout>
 </ScrollView>
